--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -129,7 +129,10 @@
     <ClCompile Include="teil_2.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="teil_3.cpp" />
+    <ClCompile Include="teil_3.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="teil_4.cpp" />
     <ClCompile Include="Wuerfel.cpp" />
   </ItemGroup>
   <ItemGroup>
